samples/SalesforceFoundation/Households/src/objects/Opportunity_Rollup_Error__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>DEPRECATED.  Errors that occurred during Opportunity Rollups are now stored in the System Error Log.</description>
    <fields>
        <fullName>Error_Datetime__c</fullName>
        <inlineHelpText>Datetime of the error</inlineHelpText>
        <label>Error Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <inlineHelpText>Full text of the error message</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Object_Type__c</fullName>
        <inlineHelpText>The object type to which this error refers</inlineHelpText>
        <label>Error Object Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Record_Link__c</fullName>
        <inlineHelpText>Link to the record on which the error occurred</inlineHelpText>
        <label>Error Record Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <inlineHelpText>Type of error that occurred</inlineHelpText>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DEPRECATED-Opportunity Rollup Errors</label>
</CustomObject>